--- a/index.html
+++ b/index.html
@@ -85,6 +85,61 @@
         </div>
         <!-- * hero end of  -->
       </section>
+      <!--* Images started  -->
+      <section class="images">
+        <div class="container">
+          <div class="images__contents">
+            <img src="./img/Group 17google.svg" alt="" />
+            <img src="./img/Vectornetflix.svg" alt="" />
+            <img src="./img/Mcrsoft.svg" alt="" />
+            <img src="./img/mail.svg" alt="" />
+            <img src="./img/theme.svg" alt="" />
+          </div>
+        </div>
+        <!--* images end of  -->
+      </section>
+      <!--* Service started  -->
+      <section class="service">
+        <div class="container service__wrapper">
+          <div class="bg__color"></div>
+          <div class="bg__color-two"></div>
+          <h2>Service</h2>
+          <p>
+            We offer youth with chances for career development in their
+            practice. We also support a wide range of services to ensure client
+            satisfaction
+          </p>
+          <ul class="service__list">
+            <li class="service__list-item">
+              <img src="./img/service__1.svg" alt="" />
+              <h4>Send Texts Instantly</h4>
+              <h5>
+                Financial planning, forecasting and adjusting rapidly with
+                customer demands and budgets.
+              </h5>
+              <a href="#">Learn More</a>
+            </li>
+            <li class="service__list-item">
+              <img src="./img/icons__2.svg" alt="" />
+              <h4>Better Organized</h4>
+              <h5>
+                Latest technology and experienced guidance, trained HR
+                specialists to keep updated.
+              </h5>
+              <a href="#">Learn More</a>
+            </li>
+            <li class="service__list-item">
+              <img src="./img/icons__3.svg" alt="" />
+              <h4>Analytical Statistics</h4>
+              <h5>
+                Messages, real-time reminders, memos, and many more will keep
+                your team in sync.
+              </h5>
+              <a href="#">Learn More</a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script src="./js/main.js"></script>
