--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 Financial planning, forecasting and adjusting rapidly with
                 customer demands and budgets.
               </h5>
-              <a href="#">Learn More</a>
+              <a class="service__icons" href="#">Learn More</a>
             </li>
             <li class="service__list-item">
               <img src="./img/icons__2.svg" alt="" />
@@ -126,7 +126,7 @@
                 Latest technology and experienced guidance, trained HR
                 specialists to keep updated.
               </h5>
-              <a href="#">Learn More</a>
+              <a class="service__icons" href="#">Learn More</a>
             </li>
             <li class="service__list-item">
               <img src="./img/icons__3.svg" alt="" />
@@ -135,7 +135,7 @@
                 Messages, real-time reminders, memos, and many more will keep
                 your team in sync.
               </h5>
-              <a href="#">Learn More</a>
+              <a class="service__icons" href="#">Learn More</a>
             </li>
           </ul>
         </div>
