work section added

--- a/index.html
+++ b/index.html
@@ -139,6 +139,56 @@
             </li>
           </ul>
         </div>
+        <!-- * service end of  -->
+      </section>
+      <!--* Works started  -->
+      <section class="works">
+        <div class="container works__wrapper">
+          <div class="colors-one"></div>
+          <h2>Features</h2>
+          <p>
+            We provide a number of excellent features that will undoubtedly
+            improve the user experience. We also provide a better support system
+          </p>
+          <ul class="work__list">
+            <li class="work__list-item">
+              <img id="work__img" src="./img/sms.svg" alt="" />
+              <div class="colors__work"></div>
+              <h4>Encrypted Mail</h4>
+              <h5>A process of encrypting email communications</h5>
+            </li>
+            <li class="work__list-item">
+              <img src="./img/work.2.svg" alt="" />
+              <div class="colors__work-2"></div>
+              <h4>Display Sharing</h4>
+              <h5>With other participants, you may share your screens</h5>
+            </li>
+            <li class="work__list-item">
+              <img src="./img/work-3.svg" alt="" />
+              <div class="colors__work-3"></div>
+              <h4>Private Notebook</h4>
+              <h5>Private Notebook is an application that is protected</h5>
+            </li>
+            <li class="work__list-item">
+              <img src="./img/work-4.svg" alt="" />
+              <div class="colors__work-4"></div>
+              <h4>App App Assistance</h4>
+              <h5>App Assistant is quickly and effectively ran the system</h5>
+            </li>
+            <li class="work__list-item">
+              <img src="./img/work-5.svg" alt="" />
+              <div class="colors__work-5"></div>
+              <h4>Multiple Printing</h4>
+              <h5>Our canvas prints are crafted on top-notch canvas.</h5>
+            </li>
+            <li class="work__list-item">
+              <img src="./img/work-6.svg" alt="" />
+              <div class="colors__work-6"></div>
+              <h4>Free Sketch</h4>
+              <h5>Our canvas prints are crafted on top-notch canvas.</h5>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer></footer>
