create section added

--- a/index.html
+++ b/index.html
@@ -189,6 +189,30 @@
             </li>
           </ul>
         </div>
+        <!-- * works end of  -->
+      </section>
+      <!--* Create started  -->
+      <section class="create">
+        <div class="container create__wrapper">
+          <img src="./img/create__svg-1.svg" alt="" />
+          <div class="create__bg"></div>
+          <ul class="create__list">
+            <li class="create__list-item">
+              <h2>A creative team which builds stunning UI/UX</h2>
+              <h5>
+                Today, I'd like to show you some incredible Sign Up screen app
+                UI ideas and concepts that offer a modern user experience. The
+                most stunning, cutting-edge UI/UX.
+              </h5>
+              <p>
+                Klean is a free Bootstrap 5 template for multipurpose landing
+                pages. This design is a perfect choice, carefully curated by
+                <span>ThemeWagon</span>
+              </p>
+              <a href="#">Read More</a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer></footer>
