added second page

--- a/index.html
+++ b/index.html
@@ -213,6 +213,32 @@
             </li>
           </ul>
         </div>
+        <!--* Create end of  -->
+      </section>
+      <!--* Create second section started  -->
+      <section class="second">
+        <div class="container second__wrapper">
+          <img id="img__second" src="./img/second.svg" alt="" />
+          <div id="second__bg-id"></div>
+          <ul class="second__list">
+            <li class="second__list-item">
+              <h2>Devoted to defining the cutting edge</h2>
+              <h5>
+                "This new creation is cutting-edge technology," says the
+                researcher, "whose study originates from a business at the
+                forefront of space science."
+              </h5>
+              <p>
+                Klean is a free Bootstrap 5 template for multipurpose landing
+                pages. This design is a perfect choice, carefully curated by
+                <span>ThemeWagon</span>
+              </p>
+              <a href="#">Read More</a>
+            </li>
+          </ul>
+          <img src="./img/second.svg" alt="" />
+          <div class="second__bg"></div>
+        </div>
       </section>
     </main>
     <footer></footer>
