--- a/index.html
+++ b/index.html
@@ -239,6 +239,33 @@
           <img src="./img/second.svg" alt="" />
           <div class="second__bg"></div>
         </div>
+        <!-- * second end of  -->
+      </section>
+      <!--* projects started  -->
+      <section class="projects">
+        <div class="container projects__wrapper">
+          <h2>Our Projects</h2>
+          <p>
+            A project is a single or team activity, combining research and
+            design with best effort. Here are some of our team's projects
+          </p>
+
+          <div class="contents">
+            <div class="first__images">
+              <img src="./img/img-1.svg" alt="" />
+              <img src="./img/img-2.svg" alt="" />
+            </div>
+            <div class="second__images">
+              <img src="./img/img-3.svg" alt="" />
+              <img src="./img/img-4.svg" alt="" />
+            </div>
+            <div class="there__images">
+              <img src="./img/img-5.svg" alt="" />
+              <img src="./img/img-6.svg" alt="" />
+            </div>
+          </div>
+          <a href="#">View More</a>
+        </div>
       </section>
     </main>
     <footer></footer>
