team section added

--- a/index.html
+++ b/index.html
@@ -266,6 +266,44 @@
           </div>
           <a href="#">View More</a>
         </div>
+        <!-- * projects end of  -->
+      </section>
+      <!--* Team started  -->
+      <section class="team">
+        <div class="container team__wrapper">
+          <h2>Our team</h2>
+          <p>
+            People from various origins, cultures, and personalities make up our
+            team. This blend makes it a powerful team
+          </p>
+          <ul class="team__list">
+            <li class="team__list-item">
+              <img src="./img/team-1.svg" alt="" />
+              <div class="team__color-one"></div>
+              <h3>John Adams</h3>
+              <h5>CEO</h5>
+            </li>
+            <li class="team__list-item">
+              <img src="./img/team-2.svg" alt="" />
+              <div class="team__color-two"></div>
+              <h3>John Adams</h3>
+              <h5>CEO</h5>
+            </li>
+            <li class="team__list-item">
+              <img src="./img/team-3.svg" alt="" />
+              <div class="team__color-there"></div>
+              <h3>John Adams</h3>
+              <h5>CEO</h5>
+            </li>
+            <li class="team__list-item">
+              <img src="./img/team-4.svg" alt="" />
+              <div class="team__color-four"></div>
+              <h3>John Adams</h3>
+              <h5>CEO</h5>
+            </li>
+          </ul>
+          <a href="#">View Full Team</a>
+        </div>
       </section>
     </main>
     <footer></footer>
